add DevMode options for: 1) Add Counters to Permanent, 2) Tap Permanent, 3) Untap Permanent

--- a/src/res/lang/en.properties
+++ b/src/res/lang/en.properties
@@ -59,6 +59,15 @@ Display/setupbattlefield/button=Setup Game State
 Display/tutor/menu=Tutor for Card
 Display/tutor/button=Tutor for Card
 
+Display/addcounter/menu=Add Counter to Permanent
+Display/addcounter/button=Add Counter to Permanent
+
+Display/tapperm/menu=Tap Permanent
+Display/tapperm/button=Tap Permanent
+
+Display/untapperm/menu=Untap Permanent
+Display/untapperm/button=Untap Permanent
+
 DownloadPictures/title=Downloading
 DownloadPictures/no-more=All card pictures have been downloaded.
 
