--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -1,12 +1,12 @@
-Forge Beta: 07-25-2011 ver 1.0.14 SVN rev 10003
+Forge Beta: 07-05-2011 ver 1.0.15 SVN rev 10392
 
 (Quest icons used created by Teekatas, from his Legendora set 
 
 http://raindropmemory.deviantart.com)
 
-#### cards in total.
+8500 cards in total.
 
-This version is based upon the revision number #### which is found on our SVN.
+This version is based upon the revision number 10392 which is found on our SVN.
 
 
 We have added greater card availability for the card shop at the beginning of a quest. We have a few new quest opponent decks and several of the older quest decks have been drastically changed and should now be more challenging.
@@ -29,7 +29,7 @@ We have changed the archiving format to ".tar.bz2". There are utilities for Wind
 
 The Mac OS application version:
 
-We have packaged the Forge 07/25/2011 BETA version as a Mac OS application. You can double click the Forge.app icon to launch the forge application on your Apple computer running Mac OS. This application will automatically increase the java heap space memory for you as it launches. This version does not require the forge.command file and it does not need to start the Terminal application as part of the start up process. This version should only require java 1.5.
+We have packaged the Forge 07/05/2011 BETA version as a Mac OS application. You can double click the Forge.app icon to launch the forge application on your Apple computer running Mac OS. This application will automatically increase the java heap space memory for you as it launches. This version does not require the forge.command file and it does not need to start the Terminal application as part of the start up process. This version should only require java 1.5.
 
 You can move a copy of your pictures and decks over to the Forge.app application. Right click or control click on the Forge.app icon. Select Show Package Contents form the contextual menu. A Finder window will open and will display a folder named Contents. Navigate to the folder:
 
@@ -385,16 +385,96 @@ Fixes/Features:
 - Updated some SVars.
 - Cleanup in CF_Creatures.
 - Updated the changes.txt file.
+- Fixed trigger on Godtracker of Jund.
+- Removed a TODO in AF_Animate.
+- Ran Set Info Script.
+- Removed main. It is now in a unit test.
+- Updated the changes.txt file. Beta to be based on rev 10392.
 
 
 Many people helped with this version. A special thank you goes out to them:
 
-
+Sloth
+Braids
+JenDave
+Hellfish
+Rob Cashwalker
+Friar Sol
+Slapshot5
+Jeff Wadsworth
+Agetian
+SoulStorm
+Starcrash
+ZzzzSleep
+Marc
+DeadSpeak
+Chris H
 
 
 Added many cards, including:
 
-
+Annex
+Baloth Cage Trap
+Canopy Claws
+Canopy Dragon
+Caregiver
+Chaotic Goo
+Conquer
+Cyclops Gladiator
+Death Charmer
+Duct Crawler
+Escaped Shapeshifter
+Evolution Vat
+Field Surgeon
+Genju of the Cedars
+Genju of the Falls
+Genju of the Fens
+Genju of the Fields
+Genju of the Spires
+Giant Caterpillar
+Gibbering Descent
+Groundswell
+Hellkite Hatchling
+Jester's Mask
+Kami of the Painted Road
+Lavaball Trap
+Leering Gargoyle
+Livewire Lash
+Loyal Gyrfalcon
+Maelstrom Djinn
+Manriki-Gusari
+Marrow Chomper
+Molten-Tail Masticore
+Mysteries of the Deep
+Nacatl Hunt-Pride
+Pale Wayfarer
+Permafrost Trap
+Puresight Merrow
+Ravenous Trap
+Razor Barrier
+Razormane Masticore
+Sadistic Sacrament
+Sealed Fate
+Seed Spark
+Sentry Oak
+Shrewd Hatchling
+Singe
+Skittish Valesk
+Sleep
+Spin Engine
+Spiritual Sanctuary
+Steal Enchantment
+Subdue
+Tar Fiend
+Teleport
+Tomb Hex
+Train of Thought
+Unblinking Bleb
+Vertigo
+Voracious Dragon
+Wall of Dust
+Wall of Vapor
+Whiplash Trap
 
 
 end
