- Cleaned the changes.txt file.

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -1,27 +1,15 @@
-Forge Beta: 07-05-2011 ver 1.0.15 SVN rev 10392
+Forge Beta: ##-##-2011 ver # SVN rev #
 
 (Quest icons used created by Teekatas, from his Legendora set 
 
 http://raindropmemory.deviantart.com)
 
-8500 cards in total.
+# cards in total.
 
-This version is based upon the revision number 10392 which is found on our SVN.
+This version is based upon the revision number # which is found on our SVN.
 
 
-We have added greater card availability for the card shop at the beginning of a quest. We have a few new quest opponent decks and several of the older quest decks have been drastically changed and should now be more challenging.
 
-The beginning of a min-max system is now in place. This is a work in progress and we all will have to wait to see how this turns out. The current hinting system used by forge may help to prune out some branches. The min-max code currently is located in a separate branch on the SVN and most of this work has not yet made it into the main Forge branch.
-
-Several of the set pics had somehow become corrupted on the server. The original pics have been re-uploaded to the server and this should take care of this problem.
-
-Marc continues to work on a new and original set of pet pics for quest mode. He also recently made a set of overlays that can turn any of the existing card pics to a foil like type of image. This might provide an interesting type of reward for quest mode. This is a work in progress.
-
-Added draft pick data collection. Added UI option and preference to allow user to disable (default is to collect if network available). Added HttpUtil to house methods to help deal with cardforge.org website interaction, which will become more useful. Right now, the AI makes some simple evaluations that compare p/t to the mana cost, with bonuses for keywords and abilities.
-
-Rob recently implemented a method to track what the human chooses, then uploads the pick data to cardforge.org, where it's averaged in a database. While the data collection period is going on, Rob will be modifying the draft AI to use the generated data for sorting the cards presented.
-
-Rob and Braids have implemented a new thermometer type window which will be displayed at launch and when the deck editor is opened. These two actions tend to take some time to complete and this new thermometer will help to notify people that forge is not frozen but is busy at the moment.
 
 
 We have changed the archiving format to ".tar.bz2". There are utilities for Windows, Mac OS and the various *nix's that can be used to decompress these archives.
@@ -29,7 +17,7 @@ We have changed the archiving format to ".tar.bz2". There are utilities for Wind
 
 The Mac OS application version:
 
-We have packaged the Forge 07/05/2011 BETA version as a Mac OS application. You can double click the Forge.app icon to launch the forge application on your Apple computer running Mac OS. This application will automatically increase the java heap space memory for you as it launches. This version does not require the forge.command file and it does not need to start the Terminal application as part of the start up process. This version should only require java 1.5.
+We have packaged the Forge ##/##/2011 BETA version as a Mac OS application. You can double click the Forge.app icon to launch the forge application on your Apple computer running Mac OS. This application will automatically increase the java heap space memory for you as it launches. This version does not require the forge.command file and it does not need to start the Terminal application as part of the start up process. This version should only require java 1.5.
 
 You can move a copy of your pictures and decks over to the Forge.app application. Right click or control click on the Forge.app icon. Select Show Package Contents form the contextual menu. A Finder window will open and will display a folder named Contents. Navigate to the folder:
 
@@ -40,441 +28,17 @@ Your decks can be placed in the decks folder, your pics can be placed in the pic
 
 Fixes/Features:
 
-- Fixed an issue AF_Clash had with subabilities.
-- Woodland Guidance now exiles itself as it should.
-- Small code tweaks in AF_Destroy to be more consistent with other AFs.
-- Initial version of new Import Deck code in quest mode.
-- Added what is probably the first hardcoding-only keyword: "CARDNAME can't block <other card's CARDNAME> (<other card's UniqueNumber>)". Perhaps we can work something out down the line that will let scripts access things like the cards name,uniquenumber and such right away but for now it's hardcoded.
-- Java 5 compatibility: eliminated all compiler errors and warnings for java 5; this necessitated use of java's reflection mechanism in a few places where we were using java 6 calls. so, the code will still take advantage of java 6 features if they are available. this may have been a blockheaded move, as other developers are starting to think java 6 is the way to go. fortunately, all uses of reflection are easily found with searches for getMethod and getField.
-- Methods instead of static fields: refactored direct references to static fields of forge.AllZone, forge.ComputerUtil_Block2, and forge.Phase to use method calls instead. i made the static member fields themselves private. this changed many lines of code, but will help with future AI improvements. also, the changes are simple. for example, instead of AllZone.HumanPlayer, use AllZone.getHumanPlayer().
-- Removed unneeded code: removed SimultaneousEntry and SimultaneousEntryCounter fields and associated methods from forge.PlayerZone_ComesIntoPlay. these fields were only being written to and never read from.
-- Updated text of Masticore.
-- Changed AllZone.ManaPool to AllZone.getManaPool().
-- Added greater card availability for the Card Shop at the beginning of a quest.
-- Made Effects immutable and suppressed ChangesZone triggers while putting them into play, just in case.
-- Added a CheckSVar restriction to SpellAbilities. The format is "CheckSVar$ <SVarName> | SVarCompare$ <Operator><Operand> " for example " CheckSVar$ LandsEntered | SVarCompare GE2". This is mainly useful for a few of the traps.<Operand> can be a number or an SVar name.
-- Moved the compare() function from Card to AllZoneUtil. Removed a couple of extra implementations of the same thing.
-- The ThisTurnEntered infrastructure disregards immutable cards now (So that the mana pool,effects and emblems aren't counted.)
-- Fixed a small issue with ThisTurnEntered.
-- Ran Set Info Script.
-- BecomesTarget Safeguards/Fix for Selkie Hedge-Mage.
-- Added some SVars.
-- The AI can now use cycling abilities of lands.
-- First phase of merge with trunk r9969.
-- Phase 2 of merge from trunk r9969. This commit only affects the braids-minimax branch. Introducing actual minimax code!
-- Reformat all java code files. Optimize all imports. Preparing to audit all files (checkstyle, license, pmd, cpd etc. plugins will be run).
-- Fix javadoc.
-- Better logic for caller of coin flip in AF_FlipACoin; fix resolving sub-abilities in AF_FlipACoin.
-- Added a function to AllZoneUtil (not used yet, but working on it, and with all the huge checkins, merging has become impossible.)
-- Cleanup based on IntelliJ code analysis.
-- Fixied Skyshooter's casting cost.
-- Last of the big checkins. Fixing Javadocs, moving various classes, interfaces into their own files.
-- Fixed Dryad Arbor being green.
-- Deck Editor (only regular atm) filtering now ignores special characters such as ž, ‰, š and ‡ in card names.
-- Corrected names to include the above characters for Dand‰n, El-Hajj‰j, Khab‡l Ghoul, Legions of Lim-Džl, Lim-Džl the Necromancer, Lim-Džl's Cohort, Lim-Džl's High Guard.
-- Fixed triggered ability not using AbilityFactory.resolve (and not checking conditions and subabilities because of this).
-- Same deck editor fix as before but for ®.
-- Corrected names to include the above characters for ®rathi Berserker, ®ther Adept, ®ther Burst, ®ther Charge, ®ther Figment, ®ther Flash, ®ther Membrane, ®ther Mutation, ®ther Shockwave, ®ther Spellbomb, ®ther Sting, ®ther Tradewinds, ®ther Vial, ®ther Web, ®therflame Wall, ®thermage's Touch, ®thersnipe, Azorius ®thermage, Frozen ®ther, Scornful ®ther-Lich, Tainted ®ther, Vedalken ®thermage.
-- Removed RemAI from two cards.
-- Fixed Elspeth Emblem so that it is both owned and controlled by the player that put it into play.
-- Added DevMode options for: 1) Add Counters to Permanent, 2) Tap Permanent, 3) Untap Permanent.
-- Cleanup in BoosterDraft.java.
-- Added the Leprechaun 1 deck.
-- Fixed namechanged cards in AI quest decks.
-- Simplify card names before requesting them from server.
-- Moved simplifyCardNameString() to CardUtil.
-- Added a bit of backwards compatibility to loading quest data. Should only need to be there for a few betas, at which point most users' questData files will be updated.
-- I had missed ®ther Burst, ®ther Mutation and Surging ®ther before.
-- Increased the quest mode bazaar stall icon size to 80 x 80 pixels.
-- Ran Set Info Script.
-- Oops. Forgot to check in a file.
-- Reverted a bit of code now that the missing class is back.
-- Suppressed getSubAbility for the wrapper ability of triggered abilities, so the subabilities aren't executed twice (Is there a better solution?).
-- Cleanup in Input_PayManaCost.
-- Added SVars to Dark Tutelage.
-- Better solution for fixing subabilities of triggered abilities triggering twice.
-- Fixed Razormane Masticore.
-- Added the option curse to AF Untap.
-- The AI can now use Maze of Ith.
-- Improved the AI of cycling lands.
-- The AI will no longer play lands with cycling if it has enough lands already.
-- Added a Green Arrow 3 Aggro deck.
-- Added RemAIDeck SVar to Siren's Call.
-- Fixed logic error in last commit.
-- More backwards compatibility safeguards.
-- Added the ability to specify the font of the cardpanel/detailpane/cardtables in the gui.properties file.
-- Removed accidental JavaCompiler import.
-- Cleanup in NewConstants.java.
-- Refactor some code from CardFactoryUtil to PlayerUtil that is used by the Player classes.
-- Fixed possible AI error when Sarkhan, the Mad looks to create a Dragon token.
-- Fixed Fertilid.
-- Fixing Acuitects Will SetInfo.
-- Card name edit for Lim-Dul's Cohort.
-- Reverted the font shenanigans from r10066.
-- Fixed some possible stack irritations caused by cleaning the stack after abilities that did not use it.
-- The AI will no longer animate lands that will have summoning sickness.
-- Reverted my card name edit for Lim-Dul's Cohort.
-- Fixed duplicate lines in javadoc for CF_Planeswalkers.
-- Fixed duplicate lines in javadoc for CF_Creatures and CF_Sorceries.
-- Cleaning up some javadoc.
-- Converted Disciple of Kangee to script.
-- Converted Spiritmonger to script.
-- Converted Wild Mongrel to script; and a few tweaks to the supporting AFs.
-- Added comments to places where heap usage could be decreased.
-- Added the missing SpellDescription$ to Slingbow Trap.
-- Added SVar:RemAIDeck:True to Energy Bolt and replaced the em dash with a dash.
-- Convert Whirlpool Drake and Whirlpool Rider to Script.
-- Added getSpell() and getAbility() to AF_DelayedTrigger.
-- Added Giant Caterpillar (from Visions) as an example of AB$ DelayedTrigger.
-- Converted Transluminant to script.
-- Cleanup in CardDetailPanel.java.
-- Minor code tweaks in AF_Animate.
-- Added draft pick data collection. Added UI option and preference to allow user to disable (default is to collect if network available). Added HttpUtil to house methods to help deal with cardforge.org website interaction, which will become more useful.
-- Converted Anurid Brushhopper to script.
-- Implemented lazy (deferred) loading of cards from disk. Calling CardFactory.getCards or CardFactory.getAllCards still causes significant delay. This usually happens after startup, now. We may want to add some sort of progress bar when it is cornered into loading all the cards.
-- Re-added +1/+1 -1/1 counter trading to addCounter (I'm sure it was there just a month ago. Is something wrong with it?).
-- Reverted the non-ASCII character changes.
-- Ran Set Info Script.
-- Added the IsRemembered property to isValid. Let Effect cards remember and act upon Defineds. Added Evolution Vat as an example.
-- Changed the SVar for Crossbow Ambush to SVar:RemAIDeck:True.
-- Major fixes to Maven build. Windows exe file no longer contains jar file. Removed extra dependencies from jar file. The archive files are 50% smaller now. The Windows exe tested fine under Windows XP and 4GB RAM.
-- Removed obselete build files.
-- Fixed a bug, when AI will pay X only once in a cost including X X (I don't think there are cards like this, the AI can use at the moment anyway).
-- Fixed the ManaPool overriding the card in your deck with CardID 1.
-- Removed obselete build files. Fix version numbers in Windows build.
-- Fixed flipACoin to not always have the same result during a match.
-- Merged cardsfolder from trunk@9969 to braids-minimax branch. Still need to fix compile.
-- Ran Set Info Script.
-- Start of a unit test framework. Removed some of the main() tests from classes and put them into tests. Test results are currently supressed so as not to break the build.
-- A better fix for the CardID issue.
-- Ran Set Info Script.
-- Moved a few more items to the unit test directory.
-- I'd like to keep the Ant build file around for a bit until I can verify Maven works for my purposes.
-- Added etb ability for Ghost Council of Orzhova.
-- Added a Green Arrow 1 deck.
-- Removed BoosterPack in favor of BoosterGenerator.
-- Added AF_Protection for "Protection from <color>" keywords. Currently works for comma-delimited lists of colors or "Any" for "your choice of colors". This will allow for better protection for AI in Combat. Can also be generalized for protection from anything. (Copied and tweaked from AF_Pump).
-- Converted Knight of Dawn to AF_Protection.
-- Converted Thornscape Master to AF_Protection.
-- Converted Sejiri Steppe to script.
-- Converted Mother of Runes to AF_Protection.
-- Added mtg-data.txt with Commander info.
-- Converted Moonlit Strider to script.
-- Added P/T to Kami of the Painted Road.
-- Fixed Artillerize.
-- Ran Set Info Script.
-- The AI will no longer use AF PutCounterAll if there is nothing to put on.
-- Bugfix - added returns to all catch blocks, so that the overall function does as much as it can do until it fails. If the network was not available, there was no error, just an exception that didn't get reported.
-- More improvements for AI choosing mana sources to pay for mana. (prioritizing non-creatures and cards that only produce colorless.)
-- Removed refreshGui, eliminates possible heap space issue as Braids points out, and the method seems like a holdover from the original deck editor code, not necessary for the draft gui.
-- Added JUnit 4 to classpath.
-- Added some utilities in src/net/slightlymagic/braids/.
-- Created unit test for the lazy CardFactory, reduce its error output, and add progress monitoring to ReadCard. I am going to back out (merge -c) this commit shortly, along with r10095.
-- Removed changes to CardFactory and ReadCard so they are no longer lazy and possibly causing bugs. this rolls back r10095 and r10140.
-- Threw in a little debug for the cardname if in DevMode.
-- Added Alice in Wonderland 2 deck.
-- Unmerge excessive and possibly premature code on trunk from branches/braids-minimax, except for progress_monitor. Note dual licensing.
-- Eliminated compiler warnings about accessing static fields through an instance instead of a class.
-- The AI will now animate manlands to try to block attacking creatures.
-- Added a check for Landfall to the player class and added it like Threshold and Metalcraft to xcount. Added Groundswell as an example.
-- Fixed text.
-- More  javadoc fixes. Including a checkstyle xml file to set the javadoc checking to "package" scope.
-- Added RemAIDeck:True for Chainbreaker due to: AI cannot handle targeted RemoveCounter AFs (only Self).
-- Converted Anger to script.
-- Fixed Jester's Cap.
-- Converted Valor to script.
-- Removed unused refreshGui method.
-- Removed unused Gui_DownloadPictures (aka HQ pics).
-- Updated AF_Protection (and creatures using it) to use params: Gains$ <comma delimited list> or Choice. If Choice then AnyColor will automatically give any color, or this is a comma-delimited list of things to choose 1 from.
-- Switched to CardFactory.getCards as suggested by Braids.
-- Fixed the card text displayed by the five Scarabs.
-- Switched to CardFactory.getCards as suggested by Braids.
-- Removed unused refreshGui method.
-- Fixed Mother of Runes AbCost.
-- Converted Apostle's Blessing to AF_Protection.
-- Tweaks in AF_Protect to allow easier handling of AnyColor + Artifacts.
-- Converted Jeweled Spirit to Protection
-- Fixed Spinal Graft. Any related cards should be converted to BecomesTarget trigger.
-- Added stGravePump keyword.
-- Converted Anger and Valor to use it.
-- Reverted the default chooser for changeZone hidden to You and not Targeted.
-- Cleanup.
-- Moved test-like methods/classes into the unit test directories. Very quick and dirty.
-- Finally fixed commit.
-- Ran Set Info Script.
-- Updated the King Arthur 3 deck, tiers 1 and 2 will also be updated.
-- Fixed a StackInstance problem with stack descriptions for SubAbilities that use Defined$ Targeted and mention it in their stackdescription.
-- Gave some upkeep triggers descriptions, since they will appear in the choice dialog of simultaneous stack entries.
-- Minor updates.
-- Removed unused dynamicCopyCard.
-- Cleanup of auto-generated catch TODO's and some code formatting.
-- Removed unused IO interface.
-- Initial work on dynamic, yet relatively constant information lists. (Game data read during run-time instead of hard-coded.)
-- Removed unused CustomListener for what seems like an HQ picture pop up?
-- Cleanup of auto-generated catch TODO's.
-- Fixed Berserk.
-- Fixed LQ image of Emissary of Hope.
-- Reverted nonASCII stuff from quest decks and price lists. (And AEther Burst.)
-- Should be the last nonASCII. Not sure why it didn't go along with the last batch.
-- Import cleanups.
-- Minor changes to net.slightlymagic.braids.util.progress_monitor classes: made currentPhaseExponent a float (bugfix), BaseProgressMonitor now calls its own setTotalUnitsThisPhase more consistently, fix to BaseProgressMonitor's log message that helps determine phase weights, and plenty of javadoc improvements.
-- Added getProgressBar and reset methods.
-- Created forge.gui.MultiPhaseProgressMonitorWithETA, which uses Gui_ProgressBarWindow to display progress and ETA of an operation (with one or more phases).
-- Added needed import (Card), added graphical progresss monitor with ETA, added support for zip files where txt files are within any number of subdirectories in the given cardsfolder, renamed constructor's parameter to vastly improve clarity.
-- Added lots of reports that can be generated by the Maven site tool - TODO, Test, PMD, CPD, FindBugs reports.
-- Fixed Strategic Planning.
-- Modified pickValue to use 30 as the max value. Value is now based on a sliding scale using pack pick count and overall draft pick count.
-- Modified draft card evaluation to take card rarity into account.
-- Switched to CardFactory.getCards as suggested by Braids.
-- Reduced cardpool for Full draft mode to match a small set. Should make Full draft mode a little more interesting.
-- Convert Dragon Broodmother to Trigger.
-- Tokens will now Parse granted Keywords.
-- Added java-yield library, which bundles log4j, and add their licenses files.
-- Added generator utilities for use with future ReadCard.
-- Fixed the keyword "At the beginning of your upkeep, CARDNAME deals 8 damage to you unless you pay".
-- Fixed Mysteries of the Deep.
-- Added the YouCtrl restriction to and RemAIDeck:True to Riptide Laboratory.
-- Added java-yield jar to classpath. Lots of little changes ReadCard: it supports subdirectories within cardsfolder. It now uses a generator to scan the files within the cardsfolder tree instead of storing a long list of file names, aided by java-yield. Removed some dead code, fixed titles of progress bars, removed a superfluous println, fixed RunTimeExceptions thrown from catch clauses to include a cause parameter for more detailed stack traces (common best practice), slightly improved accuracy of progress monitoring, and fixed misspellings.
-- On braids-minimax branch: remove unneeded whitespace to conform with trunk.
-- Little fix.
-- Added the missing manifest.forge file in the hopes that Snacko's scripts will work once again.
-- Ran Set Info Script.
-- Small logic fix for the AI of AF Pump.
-- Added the Cow 1 deck.
-- Created alphabetical subdirectories within res/cardsfolder to fix some SVN problems. ReadCard already supports this.
-- The AI usage of triggered ChangeZoneAll abilities is no longer random.
-- Updated the King Arthur 2 quest deck.
-- More updates to automated development website creation. Now has javadocs, browsable code, unit test reports etc. Will upload site later.
-- Removed res/cardsfolder/a*.txt through c*.txt because these files are already in res/cardsfolder/a/ through res/cardsfolder/a/. This should restore normal operation of forge. previously, people were getting errors about duplicate cards.
-- Moved e*.txt through z*.txt from res/cardsfolder to their own subdirectory.
-- On branches/braids-minimax: undid some changes to source files that were not necessary to make future merges easier. It compiles.
-- On branches/braids-minimax: housekeeping.
-- Updated Python scripts to conform with new cardsfolder structure. Only the reprintSetInfo script is "hardcoded" to the structure, the other two will just find recursively inside the base folder.
-- Added basic targeting to AF Rearrange triggers.
-- Fixed colors of copyTokens.
-- In preparation for statically pumped triggers: Added the ability for stPump to force pumps into SVars.
-- Updated the King Arthur 1 quest deck.
-- Updated the Wyatt Earp decks.
-- Implemented statically pumped triggers.
-- Added Livewire Lash
-- Converted/Corrected Bear Umbra; Helm of the Ghastlord; Mephidross Vampire and Snake Umbra.
-- Edited the "manifest.forge" file and with luck this is what Snacko's Scripts need.
-- Converted Farmstead to script.
-- Converted Oversold Cemetery.
-- Added script to automatically create or update cardsfolder.zip if Info-ZIP is available.
-- Converted Pillory of the Sleepless to script.
-- Fixed typo.
-- Added CardList(int) constructor for creating a list with an estimated maximum size.
-- Added progress bar for getAllCards, a heap-intensive operation. It is faster than I originally thought it would be.
-- Updated docs.
-- Fixed Goblin Skycutter.
-- Converted Mirror-Sigil Sergeant and Vampire Lacerator.
-- Added a description for Apu Nahasapeemapetilon 2 deck.
-- Maven builds will now zip up the cardsfolder dir and use only the cardsfolder.zip file. Builds are *much* faster now. Excluding the res/lib from the final package since the deps are included in the final jar. The packages are much smaller now as well.
-- Converted Battle of Wits to script.
-- Converted Necrogenesis to script.
-- Enabled downloads of SNAPSHOT builds from Arcane Maven repo. Fixes issue with using jyield.
-- Converted the rest of Venarian Gold to script.
-- Converted Keening Stone to script.
-- Removed SVar:RemAIDeck:True from some creatures with abilities the AI can't and will not try to use but which are otherwise alright.
-- Converted Time Bomb to script.
-- Small fix.
-- Converted Day of the Dragons to script.
-- Ran Set Info Script.
-- Small tweak to AF_Regen stack description.
-- Cleanup in CardFactoryUtil.java.
-- Converted That Which Was Taken to AF. Includes AI tweaks to use DIVINITY counters appropriately.
-- Fixed an issue with site generation.
-- Javadoc fix in CF_Sorceries and CF_Instants.
-- Fixed typo.
-- Converted Armored Guardian to AF_Protection.
-- Converted Benevolent Bodyguard to AF_Protection.
-- Converted Crimson Acolyte to AF_Protection.
-- Branches/braids-minimax: remove cardsfolder in preparation for shortcut merging (copying) in the one from trunk@ r10266.
-- Branches/braids-minimax: shortcut merge cardsfolder r10266.
-- Updated some cards to use AF_Protection instead of AF_Pump.
-- Fixed typo in Keeper of Kookus.
-- Added a basic conditional for "if <color> was spent to cast this, do zzzzz"; piggybacks on Sunburst. Only available in AFs. Compy is set up to be able to use it, but the logic doesn't exist for him to *check* the conditional and decide what color mana to spend. (Seed Spark is coming as an example.)
-- Fixed a treeProperties error.
-- Tweaked stack description for AF_Draw.
-- Little fixes for cards using AF Dig/Reveal.
-- Removed the unneeded variable upkeepCost from the card class.
-- Removed the other upkeepCost variable from the card class.
-- Merged cumulative upkeep with other upkeeps.
-- Javadoc fixes.
-- Moved the randomness in copyPermanentTriggerAI to copyPermanentCanPlayAI.
-- Removed RemAIDeck from Mirrorworks.
-- [maven-svn-wagon] site.
-- Ran Set Info Script.
-- Added javadoc a couple places it was missing.
-- A couple small changes in some AFs.
-- Fixed Portcullis and Razormane Masticore.
-- Added Description to Vesuvan Doppelganger upkeep ability.
-- Fixed Pooling Venom.
-- Fixed NPE in playReusable.
-- Updated some SVars.
-- Added an easy and a very hard version of the Dino decks.
-- Cleanup with CardFactories. Auras, Instants and Sorceries will no longer gain a "default" Spell just to clear it later
-- Multikicker will now be assigned after the CardFactory runs. Did we have problems with non-Permanent Spells and Multikicker before this?
-- Fixed Canopy Cover.
-- Fixed Sentry Oak.
-- Fixed Siege of Towers.
-- Added Mystic Remora.
-- Converted Backfire to script.
-- Remove RemAIDeck from Time Bomb.
-- Reverting a Clone when it leaves the battlefield no longer uses the stack.
-- Siren's Call destroy at eot ability now uses the stack.
-- Converted Gigantomancer to script.
-- Converted Serendib Sorcerer and Sorceress Queen to script.
-- Fixed Entangling Trap (creature untaps during next untap step.)
-- First iteration of AF_Attach for Auras (GainControl)
-- Converted all enControl to AF_Attach.
-- Dealt Damage to Player not being reset properly.
-- Some SpellAbility/Aura related fixes.
-- Converted Crystallization Trigger to BecomesTarget.
-- Removed unused code in CF_Auras.
-- Cleanup in getSpellCostChange.
-- Fixed issue with CostChange and X costs.
-- Ran Set Info Script.
-- Fixed being unable to cast spells with up to X targets with zero targets.
-- Fixed trigger in Chainer, Dementia Master.
-- Fixed an AI issue in AF dig if destination2 is library.
-- Fixed description of disappear.
-- AI drafting improvement: If the first pick has more than one color - add the second as second color to draft.
-- AI drafting improvement: Fixed AI not picking artifacts before picking from the rest of cards (artifact, lands and off-color cards) at random.
-- Added devoured tracking to each card. Can be accessed via Count$Devoured <Valid>.
-- Added HasDevoured/HasNotDevoured properties.
-- Converted Skullmulcher.
-- Converted Sygg, River Guide to script and added Pale Wayfarer. Credits go to Starcrash.
-- Converted Helldozer to script.
-- Little fix.
-- Fixed Phyrexian Reclamation casting cost.
-- Converted Memnarch to script.
-- Converted Goldmeadow Lookout to script.
-- Updated the changes.txt file in preparation for a beta release on this upcoming tuesday.
-- Commented out the Full draft cardpool reduction.
-- Converted Gilt-Leaf Archdruid to script.
-- Converted Figure of Destiny to script.
-- Fix for AI casting Control Auras without a Target.
-- Little fix.
-- Updated some defined parameters of triggered abilities on auras.
-- Counters will now be removed from permanents changing zone after triggers get called (fixes Necroskitter).
-- Ran set info script.
-- Fixed the LQ pic URL for Sealed Fate.
-- Hack so that when you open the Deck Editor a second time, the default action is set (typing a card name and pressing <enter> will filter).  Previously, there was no default action when opening the Deck Editor a second time. i.e. typing a card name and pressing <enter> did nothing.
-- Changed the keyword of some auras from "Enchant Creature" to "Enchant creature".
-- attachAIPumpPreference was always returning null. Resulted in some dead code. Have it return AI_getMostExpensivePermanent(list) until such time where better AI logic is in place.
-- Changed rarity of Imperiosaur to none, so it won't appear in quest/drafts.
-- Fixed AF_Animate for when you add a color in the animation, but aren't using OverwriteColors$ True.
-- Card.hasProperty will now accept Y also when checking for counters.
-- Commander Reprint SetInfo.
-- NPH reprints.
-- Added Commander set data to the res/blockdata/setdata.txt file.
-- Reverted the bad changes of r10361.
-- Updated some SVars.
-- AI drafting improvement: The AI will no longer pick cards with RemRandomDeck.
-- Converted Chronatog to script.
-- Converted Kavu Titan to script.
-- Fixed the type for Squadron Hawk.
-- Converted Tribal Forcemage to script.
-- Revert Kavu Titan.
-- Updated the Abraham Lincoln 3 deck.
-- Updated the Radiant 3 deck.
-- Updated Sauron 2 deck.
-- Updated the Sherlock Holmes decks.
-- Updated some SVars.
-- Cleanup in CF_Creatures.
-- Updated the changes.txt file.
-- Fixed trigger on Godtracker of Jund.
-- Removed a TODO in AF_Animate.
-- Ran Set Info Script.
-- Removed main. It is now in a unit test.
-- Updated the changes.txt file. Beta to be based on rev 10392.
+
 
 
 Many people helped with this version. A special thank you goes out to them:
 
-Sloth
-Braids
-JenDave
-Hellfish
-Rob Cashwalker
-Friar Sol
-Slapshot5
-Jeff Wadsworth
-Agetian
-SoulStorm
-Starcrash
-ZzzzSleep
-Marc
-DeadSpeak
-Chris H
+
 
 
 Added many cards, including:
 
-Annex
-Baloth Cage Trap
-Canopy Claws
-Canopy Dragon
-Caregiver
-Chaotic Goo
-Conquer
-Cyclops Gladiator
-Death Charmer
-Duct Crawler
-Escaped Shapeshifter
-Evolution Vat
-Field Surgeon
-Genju of the Cedars
-Genju of the Falls
-Genju of the Fens
-Genju of the Fields
-Genju of the Spires
-Giant Caterpillar
-Gibbering Descent
-Groundswell
-Hellkite Hatchling
-Jester's Mask
-Kami of the Painted Road
-Lavaball Trap
-Leering Gargoyle
-Livewire Lash
-Loyal Gyrfalcon
-Maelstrom Djinn
-Manriki-Gusari
-Marrow Chomper
-Molten-Tail Masticore
-Mysteries of the Deep
-Nacatl Hunt-Pride
-Pale Wayfarer
-Permafrost Trap
-Puresight Merrow
-Ravenous Trap
-Razor Barrier
-Razormane Masticore
-Sadistic Sacrament
-Sealed Fate
-Seed Spark
-Sentry Oak
-Shrewd Hatchling
-Singe
-Skittish Valesk
-Sleep
-Spin Engine
-Spiritual Sanctuary
-Steal Enchantment
-Subdue
-Tar Fiend
-Teleport
-Tomb Hex
-Train of Thought
-Unblinking Bleb
-Vertigo
-Voracious Dragon
-Wall of Dust
-Wall of Vapor
-Whiplash Trap
+
 
 
 end
