add a DevMode to allow you to play unlimited lands (well, 100) each turn you activate it.

--- a/src/res/lang/en.properties
+++ b/src/res/lang/en.properties
@@ -68,6 +68,9 @@ Display/tapperm/button=Tap Permanent
 Display/untapperm/menu=Untap Permanent
 Display/untapperm/button=Untap Permanent
 
+Display/nolandlimit/menu=Play Unlimited Lands This Turn
+Display/nolandlimit/button=Play Unlimited Lands This Turn
+
 DownloadPictures/title=Downloading
 DownloadPictures/no-more=All card pictures have been downloaded.
 
